# A2A

./: .editorconfig  .gitattributes  .gitignore  .jscpd.json  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  _navbar.md  _sidebar.md  documentation.md  llms.txt  mkdocs.yml  noxfile.py  requirements-docs.txt  sitemap.xml  validate-optimizations.js
samples/python/: README.md  pyproject.toml  test_fingerprint_basic.py
samples/python/agents/: README.md
samples/python/agents/a2a_mcp/: README.md  pyproject.toml
samples/python/agents/a2a_mcp/src/a2a_mcp/: __init__.py
samples/python/agents/a2a_mcp/src/a2a_mcp/agents/: __main__.py  adk_travel_agent.py  langgraph_planner_agent.py  orchestrator_agent.py
samples/python/agents/a2a_mcp/src/a2a_mcp/common/: agent_executor.py  agent_runner.py  base_agent.py  prompts.py  types.py  utils.py  workflow.py
samples/python/agents/a2a_mcp/src/a2a_mcp/mcp/: server.py
samples/python/agents/ag2/: __main__.py  agent.py  task_manager.py
samples/python/agents/crewai/: __main__.py  agent.py  agent_executor.py  task_manager.py
samples/python/agents/extended_agent_card_adk/: task_manager.py
samples/python/agents/google_adk/: __main__.py  agent.py  task_manager.py
samples/python/agents/google_adk_with_agent_auth/: .env.example  README.md  __main__.py  agent.py  magic_8ball.py  middleware.py  personal_assistant.py  pyproject.toml
samples/python/agents/headless_agent_auth/: __main__.py  agent.py  agent_executor.py  graph_resumer.py  oauth2_middleware.py  push_notification_listener.py  pyproject.toml  test_client.py
samples/python/agents/langgraph/: __main__.py  agent.py  task_manager.py
samples/python/agents/llama_index_file_chat/: __main__.py  agent.py  agent_executor.py  task_manager.py
samples/python/agents/marvin/: agent_executor.py  task_manager.py
samples/python/agents/mcp_sqlagent/: pyproject.toml
samples/python/agents/mindsdb/: README.md  __main__.py  agent.py  task_manager.py
samples/python/agents/pocketflow/: .gitignore  README.md  pyproject.toml  requirements.txt
samples/python/agents/pocketflow/examples/user_agent_talking_with_duckduckgo_agent/: prototype_client_agent.ipynb
samples/python/agents/pocketflow/examples/user_agent_talking_with_duckduckgo_agent/a2a_client/: chat.py  flow.py  (+2 more)
samples/python/agents/restate/: README.md  __main__.py  agent.py
samples/python/agents/semantickernel/: .env.sample  .envexample  README.md  __main__.py  agent.py  task_manager.py
samples/python/agents/shibuya_cafe/: __main__.py  agent.py  pyproject.toml  task_manager.py
samples/python/agents/travel_planner/: README.md  agent.py  agent_executor.py
samples/python/common/: types.py  types_fingerprint.py
samples/python/common/client/: __init__.py  card_resolver.py  client.py  fingerprint_client.py
samples/python/common/server/: __init__.py  base_task_manager.py  server.py  task_manager.py
samples/python/common/utils/: etl.py  fingerprint_generator.py  fingerprint_validator.py  in_memory_cache.py  push_notification_auth.py
samples/python/hosts/cli/: README.md  __main__.py  push_notification_listener.py
samples/python/hosts/multiagent/: host_agent.py  remote_agent_connection.py
samples/python/src/google_a2a/agents/: README.md
samples/python/src/google_a2a/agents/crewai/: README.md  pyproject.toml
samples/python/src/google_a2a/agents/google_adk/: README.md  pyproject.toml
samples/python/src/google_a2a/agents/langgraph/: README.md
samples/python/src/google_a2a/agents/llama_index_file_chat/: README.md  pyproject.toml  task_manager.py
samples/python/src/google_a2a/agents/semantickernel/: README.md
samples/python/src/google_a2a/hosts/: README.md
samples/python/src/google_a2a/hosts/cli/: README.md  __main__.py
samples/python/src/google_a2a/hosts/multiagent/: host_agent.py
(+266 files in other folders)
